# FakeBoy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.metadata/: version.ini
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.pde.core/.cache/: clean-cache.properties
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
res/: dmg_palettes.txt
src/: APU.cpp  APU.hpp  BasicIO.cpp  BasicIO.hpp  Bus.cpp  Bus.hpp  CPU.cpp  CPU.hpp  Cartridge.cpp  Cartridge.hpp  Debugger.cpp  Debugger.hpp  GameBoy.cpp  GameBoy.hpp  PPU.cpp  PPU.hpp  PaletteManager.cpp  PaletteManager.hpp  Utils.cpp  Utils.hpp  main.cpp
src/MBCs/: MBC.cpp  MBC.hpp  MBC_1.cpp  MBC_1.hpp  MBC_2.cpp  MBC_2.hpp  MBC_5.cpp  MBC_5.hpp  MBC_NONE.cpp  MBC_NONE.hpp
